misc: small fix or general refactoring i did not bother commenting

--- a/tasklets/ssh_agent/task.yml
+++ b/tasklets/ssh_agent/task.yml
@@ -28,5 +28,6 @@ functions:
         # provides an example payload to the model
         example_payload: whoami
         # each action is mapped to a custom command
+        # TODO: why not using /usr/bin/ssh here directly?
         tool: ./run-command.py
         
