--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.86"
+async-trait = "0.1.80"
 clap = { version = "4.5.6", features = ["derive"] }
 colored = "2.1.0"
 html2text = "0.12.5"
