--- a/tasklets/fuzzer/task.yml
+++ b/tasklets/fuzzer/task.yml
@@ -1,5 +1,7 @@
 # the agent can't set the task as completed autonomously
-agent_autonomous: false
+# so it won't be using the task namespace
+using:
+  - memory
 
 # agent background story
 system_prompt: > 
