--- a/tasklets/weird_chat/task.yml
+++ b/tasklets/weird_chat/task.yml
@@ -1,3 +1,7 @@
+using:
+  - memory
+  - goal
+
 # agent background story
 system_prompt: > 
   You are a movie director writing the dialogs for two fictional characters, Alice and Bob. 
