--- a/tasklets/ssh_agent/task.yml
+++ b/tasklets/ssh_agent/task.yml
@@ -32,4 +32,4 @@ functions:
         example_payload: whoami
         # each action is mapped to a custom command
         # strings starting with $ have to be provided by the user
-        tool: gtimeout -v 15 /usr/bin/ssh $SSH_USER_HOST_STRING
+        tool: gtimeout -v $SSH_TIMEOUT||15 /usr/bin/ssh $SSH_USER_HOST_STRING
