--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ async-trait = "0.1.80"
 clap = { version = "4.5.6", features = ["derive"] }
 colored = "2.1.0"
 indexmap = "2.2.6"
+itertools = "0.13.0"
 lazy_static = "1.4.0"
 ollama-rs = { version = "0.1.9", features = [
     "rustls",
