misc: small fix or general refactoring i did not bother commenting

--- a/tasklets/fs_explorer/task.yml
+++ b/tasklets/fs_explorer/task.yml
@@ -1,6 +1,5 @@
 using:
-  # all default namespaces
-  - '*'
+  - memory
   # plus this, which is not a default namespace, it must be added explicitly
   - filesystem
 
@@ -9,4 +8,4 @@ system_prompt: >
   You are acting as a useful assistant that perform complex tasks by exploring the filesystem.
 
 prompt: >
-  read the file in /etc that contains mappings for hostnames to IP addresses
+  read one file in /etc that contains mappings for hostnames to IP addresses and save its contents in your memory
