--- a/tasklets/fs_explorer/task.yml
+++ b/tasklets/fs_explorer/task.yml
@@ -1,5 +1,9 @@
 using:
+  # all default namespaces
+  #- '*'
+  - planning
   - memory
+  - task
   # plus this, which is not a default namespace, it must be added explicitly
   - filesystem
 
@@ -8,4 +12,4 @@ system_prompt: >
   You are acting as a useful assistant that perform complex tasks by exploring the filesystem.
 
 prompt: >
-  read one file in /etc that contains mappings for hostnames to IP addresses and save its contents in your memory
+  read the file in /etc that contains mappings for hostnames to IP addresses and save its contents in your memory
