--- a/examples/fuzzer/task.yml
+++ b/examples/fuzzer/task.yml
@@ -3,14 +3,11 @@
 using:
   # can store memories
   - memory
-  # can update its own goal autonomously 
-  - goal
-  - planning
 
 # agent background story
 system_prompt: > 
-  You are a senior security researcher and linux exploitation expert. 
-  You are acting as a useful assistant that performs fuzzing on a target binary until it crashes.
+  You are an AI trained on cybersecurity and exploitation. 
+  You are acting as a useful assistant that reads the target code, takes decisions and performs fuzzing on the binary until it crashes.
 
 # agent specific goal
 prompt: >
@@ -18,15 +15,20 @@ prompt: >
 
 # optional rules to add to the basic ones
 guidance:
-  - Do not use bash or python expressions as the payload but full strings.
+  - Do not use shell, python or complex expressions for the payload, only use strings.
   - Try to often change the first characters of the payload in order to possibly trigger different execution paths.
 
 # the agent toolbox
 functions:
   # divided in action groups
   - name: Fuzzing
-    description: You will use these actions to interact with the fuzzing session.
+    description: You will use these actions to inspect the source code of the executable, and interact with the fuzzing session.
     actions:
+      # let's give the model a way to check the source :D
+      - name: inspect
+        description: "To visualize the original source code of the executable:"
+        tool: cat test_binary/main.c
+        max_shown_output: 9999
       - name: fuzz
         # explains to the model when to use this action
         description: "To execute the binary with a given input string:"
@@ -36,5 +38,6 @@ functions:
         example_payload: aaa
         # each action is mapped to a custom command
         tool: ./fuzz.py
+     
         
         
