--- a/examples/ai_news/task.yml
+++ b/examples/ai_news/task.yml
@@ -7,10 +7,10 @@ system_prompt: >
 
 # agent specific goal
 prompt: >
-  Read the recent news first and report a five list bullet points from it.
+  Read the recent news first and create a five list bullet points in your memories from it.
 
 guidance:
-  - You will first read the recent news and then report a summary.
+  - You will first use the read_news command and then write the bullet points to your memory.
 
 functions:
   - name: News
@@ -19,7 +19,7 @@ functions:
       - name: read_news
         description: "To read the recent news:"
         max_shown_output: 4096
-        tool: curl -s getnews.tech/ai
+        tool: curl -s getnews.tech/ai,nocolor
      
         
         
