--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,12 +34,13 @@ serde_yaml = "0.9.34"
 simple-home-dir = "0.3.5"
 tokio = "1.38.0"
 xml-rs = "0.8.20"
+duration-string = { version = "0.4.0", optional = true }
 
 [features]
 default = ["ollama", "groq", "openai"]
 
 ollama = ["dep:ollama-rs"]
-groq = ["dep:groq-api-rs"]
+groq = ["dep:groq-api-rs", "dep:duration-string"]
 openai = ["dep:openai_api_rust"]
 
 
