misc: small fix or general refactoring i did not bother commenting

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -3,6 +3,9 @@ name: Build and Push Docker Images
 on:
     push:
       branches: [ "main" ]
+      paths-ignore:
+        - 'README.md'
+        - 'examples'
     pull_request:
       branches: [ "main" ]
 
