--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -6,8 +6,12 @@ on:
       paths-ignore:
         - 'README.md'
         - 'examples'
+      
     pull_request:
       branches: [ "main" ]
+      paths-ignore:
+        - 'README.md'
+        - 'examples'
 
 jobs:
   docker:
