--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "nerve"
+name = "nerve-ai"
 version = "0.1.0"
 description = "Nerve is a tool that allows creating stateful agents with any LLM of your choice - without writing a single line of code. The tool provides to the model a framework of functionalities for planning, saving or recalling memories, etc by dynamically adapting the prompt and making it stateful over multiple inferences. The model will be able to access and use these functionalities in order to accomplish the task you provided."
 edition = "2021"
@@ -9,6 +9,10 @@ license = "GPL-3.0"
 readme = "README.md"
 repository = "https://github.com/evilsocket/nerve"
 homepage = "https://github.com/evilsocket/nerve"
+
+[[bin]]
+name = "nerve"
+path = "src/main.rs"
 
 [dependencies]
 ollama-rs = { version = "0.1.9", features = [
