--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ simple-home-dir = "0.3.5"
 tokio = "1.38.0"
 xml-rs = "0.8.20"
 duration-string = { version = "0.4.0", optional = true }
+glob = "0.3.1"
 
 [features]
 default = ["ollama", "groq", "openai"]
