--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,11 +42,12 @@ duration-string = { version = "0.4.0", optional = true }
 glob = "0.3.1"
 
 [features]
-default = ["ollama", "groq", "openai"]
+default = ["ollama", "groq", "openai", "fireworks"]
 
 ollama = ["dep:ollama-rs"]
 groq = ["dep:groq-api-rs", "dep:duration-string"]
 openai = ["dep:openai_api_rust"]
+fireworks = ["dep:openai_api_rust"]
 
 
 [profile.release]
