--- a/examples/ssh_agent/task.yml
+++ b/examples/ssh_agent/task.yml
@@ -27,6 +27,9 @@ guidance:
   - Use the /tmp directory for any file write operations.
   - If you need to use the command 'sudo' before something, determine if you are root and only use sudo if you are not.
 
+# optional global action timeout
+timeout: 120s
+
 # the agent toolbox
 functions:
   # divided in namespaces
@@ -37,6 +40,8 @@ functions:
         description: "To execute a bash command on the remote host via SSH:"
         # provides an example payload to the model
         example_payload: whoami
+        # optional action timeout
+        timeout: 30s
         # each action is mapped to a custom command
         # strings starting with $ have to be provided by the user
         # here the command is executed via ssh with a timeout of 15 seconds
