--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,16 +39,17 @@ simple-home-dir = "0.3.5"
 tokio = "1.38.0"
 xml-rs = "0.8.20"
 duration-string = { version = "0.4.0", optional = true }
+rayon = { version = "1.10.0", optional = true }
 glob = "0.3.1"
 
 [features]
-default = ["ollama", "groq", "openai", "fireworks"]
+default = ["ollama", "groq", "openai", "fireworks", "rayon"]
 
 ollama = ["dep:ollama-rs"]
 groq = ["dep:groq-api-rs", "dep:duration-string"]
 openai = ["dep:openai_api_rust"]
 fireworks = ["dep:openai_api_rust"]
-
+rayon = ["dep:rayon"]
 
 [profile.release]
 lto = true        # Enable link-time optimization
