--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ glob = "0.3.1"
 human_bytes = "0.4.3"
 memory-stats = "1.1.0"
 sha256 = "1.5.0"
+bitcode = { version = "0.6.0", features = ["serde"] }
 
 [features]
 default = ["ollama", "groq", "openai", "fireworks"]
