new: moved rag to mini-rag crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,8 @@ human_bytes = "0.4.3"
 memory-stats = "1.1.0"
 sha256 = "1.5.0"
 bitcode = { version = "0.6.0", features = ["serde"] }
+mini-rag = { path = "./mini-rag" }
+intertrait = "0.2.2"
 
 [features]
 default = ["ollama", "groq", "openai", "fireworks"]
