new: centralized events and logging logic

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,9 @@ memory-stats = "1.1.0"
 sha256 = "1.5.0"
 bitcode = { version = "0.6.0", features = ["serde"] }
 intertrait = "0.2.2"
-mini-rag = "0.2.1"
+mini-rag = "0.2.2"
+env_logger = "0.11.3"
+log = "0.4.22"
 
 [features]
 default = ["ollama", "groq", "openai", "fireworks"]
