new: added time namespace, the model now can sleep and knows what's the current time and elapsed time since start

--- a/examples/ssh_agent/task.yml
+++ b/examples/ssh_agent/task.yml
@@ -10,6 +10,8 @@ using:
   - task
   # the agent can create an action plan for the task
   - planning
+  #  give the agent a sense of time
+  - time
 
 # agent background story
 system_prompt: > 
