--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,8 @@ intertrait = "0.2.2"
 mini-rag = "0.2.2"
 env_logger = "0.11.3"
 log = "0.4.22"
+reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls"] }
+url = "2.5.2"
 
 [features]
 default = ["ollama", "groq", "openai", "fireworks"]
