--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,10 +46,12 @@ memory-stats = "1.1.0"
 sha256 = "1.5.0"
 bitcode = { version = "0.6.0", features = ["serde"] }
 intertrait = "0.2.2"
-mini-rag = "0.2.2"
+mini-rag = "0.2.3"
 env_logger = "0.11.3"
 log = "0.4.22"
-reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls"] }
+reqwest = { version = "0.12.5", default-features = false, features = [
+    "rustls-tls",
+] }
 url = "2.5.2"
 
 [features]
