--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,12 +55,13 @@ reqwest_cookie_store = "0.8.0"
 serde_json = "1.0.120"
 
 [features]
-default = ["ollama", "groq", "openai", "fireworks"]
+default = ["ollama", "groq", "openai", "fireworks", "hf"]
 
 ollama = ["dep:ollama-rs"]
 groq = ["dep:groq-api-rs", "dep:duration-string"]
 openai = ["dep:openai_api_rust"]
 fireworks = ["dep:openai_api_rust"]
+hf = ["dep:openai_api_rust"]
 
 [profile.release]
 lto = true        # Enable link-time optimization
