--- a/nerve-core/Cargo.toml
+++ b/nerve-core/Cargo.toml
@@ -44,6 +44,7 @@ reqwest = { version = "0.12.5", default-features = false, features = [
 url = "2.5.2"
 reqwest_cookie_store = "0.8.0"
 serde_json = "1.0.120"
+clap = { version = "4.5.6", features = ["derive"] }
 
 [features]
 default = ["ollama", "groq", "openai", "fireworks", "hf"]
