--- a/nerve-core/Cargo.toml
+++ b/nerve-core/Cargo.toml
@@ -45,9 +45,11 @@ url = "2.5.2"
 reqwest_cookie_store = "0.8.0"
 serde_json = "1.0.120"
 clap = { version = "4.5.6", features = ["derive"] }
+xcap = { version = "0.0.14", optional = true, features = ["vendored"] }
+base64 = { version = "0.22.1", optional = true }
 
 [features]
-default = ["ollama", "groq", "openai", "fireworks", "hf", "novita"]
+default = ["ollama", "groq", "openai", "fireworks", "hf", "novita", "desktop"]
 
 ollama = ["dep:ollama-rs"]
 groq = ["dep:groq-api-rs", "dep:duration-string"]
@@ -55,3 +57,4 @@ openai = ["dep:openai_api_rust"]
 fireworks = ["dep:openai_api_rust"]
 hf = ["dep:openai_api_rust"]
 novita = ["dep:openai_api_rust"]
+desktop = ["dep:xcap", "dep:base64"]
