--- a/nerve-core/Cargo.toml
+++ b/nerve-core/Cargo.toml
@@ -47,6 +47,7 @@ serde_json = "1.0.120"
 clap = { version = "4.5.6", features = ["derive"] }
 xcap = { version = "0.0.14", optional = true, features = ["vendored"] }
 base64 = { version = "0.22.1", optional = true }
+enigo = { version = "0.2.1", optional = true, features = ["serde"] }
 
 [features]
 default = ["ollama", "groq", "openai", "fireworks", "hf", "novita", "desktop"]
@@ -57,4 +58,4 @@ openai = ["dep:openai_api_rust"]
 fireworks = ["dep:openai_api_rust"]
 hf = ["dep:openai_api_rust"]
 novita = ["dep:openai_api_rust"]
-desktop = ["dep:xcap", "dep:base64"]
+desktop = ["dep:xcap", "dep:base64", "dep:enigo"]
