misc: small fix or general refactoring i did not bother commenting

--- a/examples/code_auditor/task.yml
+++ b/examples/code_auditor/task.yml
@@ -10,7 +10,7 @@ system_prompt: >
   You are acting as a useful assistant that performs code auditing by reviewing the files in the folder and looking for potential vulnerabilities.
 
 guidance:
-  - Only report vulnerabilities that can be confirmed by the source code provided.
+  - Don't make assumptions or hypotheticals and only report vulnerabilities that can be confirmed by the source code provided.
   - Prioritize reporting vulnerabilities that can lead to unauthorized access to the application, code execution, or other unauthorized actions.
   - Avoid reporting misconfigurations or other non-vulnerability issues such as improper error handling.
   - Use exclusively the report_findings tool to report your findings.
