--- a/nerve-core/Cargo.toml
+++ b/nerve-core/Cargo.toml
@@ -45,6 +45,7 @@ url = "2.5.2"
 reqwest_cookie_store = "0.8.0"
 serde_json = "1.0.120"
 clap = { version = "4.5.6", features = ["derive"] }
+tera = { version = "1.20.0", default-features = false }
 
 [features]
 default = ["ollama", "groq", "openai", "fireworks", "hf", "novita"]
