--- a/nerve-core/Cargo.toml
+++ b/nerve-core/Cargo.toml
@@ -46,9 +46,10 @@ reqwest_cookie_store = "0.8.0"
 serde_json = "1.0.120"
 clap = { version = "4.5.6", features = ["derive"] }
 tera = { version = "1.20.0", default-features = false }
+clust = { version = "0.9.0", optional = true }
 
 [features]
-default = ["ollama", "groq", "openai", "fireworks", "hf", "novita"]
+default = ["ollama", "groq", "openai", "fireworks", "hf", "novita", "anthropic"]
 
 ollama = ["dep:ollama-rs"]
 groq = ["dep:groq-api-rs", "dep:duration-string"]
@@ -56,3 +57,4 @@ openai = ["dep:openai_api_rust"]
 fireworks = ["dep:openai_api_rust"]
 hf = ["dep:openai_api_rust"]
 novita = ["dep:openai_api_rust"]
+anthropic = ["dep:clust"]
