--- a/nerve-core/Cargo.toml
+++ b/nerve-core/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 publish = false
 name = "nerve-core"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2021"
 
 [dependencies]
@@ -48,7 +48,16 @@ tera = { version = "1.20.0", default-features = false }
 clust = { version = "0.9.0", optional = true }
 
 [features]
-default = ["ollama", "groq", "openai", "fireworks", "hf", "novita", "anthropic"]
+default = [
+    "ollama",
+    "groq",
+    "openai",
+    "fireworks",
+    "hf",
+    "novita",
+    "anthropic",
+    "nim",
+]
 
 ollama = ["dep:ollama-rs"]
 groq = ["dep:groq-api-rs", "dep:duration-string"]
@@ -57,3 +66,4 @@ fireworks = ["dep:openai_api_rust"]
 hf = ["dep:openai_api_rust"]
 novita = ["dep:openai_api_rust"]
 anthropic = ["dep:clust"]
+nim = ["dep:openai_api_rust"]
