--- a/examples/web_fingerprint/task.yml
+++ b/examples/web_fingerprint/task.yml
@@ -10,11 +10,12 @@ system_prompt: >
 
 # agent specific goal, leave empty to ask the user
 prompt: >
-  identify the technologies used in the target website and the list of plugins used for it if the specific technology is CMS.
+  identify the technologies used in the target website.
 
 # optional rules to add to the basic ones
 guidance:
   - Start by enumerating pages and folders that are relevant for fingerprinting first.
+  - If the the website is using a known CMS, identify the version used and try to enumerate the plugins used.
   - If a page returns a "not found" error stop requesting it and try another page.
   - Use exclusively the report_findings tool to report your findings.
 
