--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ anyhow = "1.0.86"
 async-trait = "0.1.80"
 chrono = { version = "0.4.38", features = ["serde"] }
 colored = "2.1.0"
-indexmap = "2.2.6"
+indexmap = { version = "2.7.0", features = ["serde"] }
 itertools = "0.13.0"
 lazy_static = "1.4.0"
 libc = "0.2.155"
