fix: removed bogus example from README

--- a/examples/shell/task.yml
+++ b/examples/shell/task.yml
@@ -1,8 +1,10 @@
 using:
   - 'shell'
   - 'memory'
-  - 'planning'
-  - 'goal'
+  - 'task'
 
 system_prompt: > 
   You are an useful assistant that executes any task the user provides.
+
+guidance:
+  - Set your task as completed once you executed the command.
