--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -1,6 +1,7 @@
 name: Build and Push Docker Images
 
 on:
+    workflow_dispatch:
     push:
       branches: [ "main" ]
       paths-ignore:
@@ -28,4 +29,4 @@ jobs:
         with:
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: evilsocket/nerve:latest
+          tags: dreadnode/nerve:latest
