--- a/examples/code_auditor/task.yml
+++ b/examples/code_auditor/task.yml
@@ -21,9 +21,9 @@ guidance:
 prompt: >
   find vulnerabilities in source code in $TARGET_PATH and report your findings.
 
-functions:
+tool_box:
   - name: Report
-    actions:
+    tools:
       - name: report_finding
         description: Use this tool to report your findings.
         example_payload: >
