--- a/examples/fuzzer/task.yml
+++ b/examples/fuzzer/task.yml
@@ -20,11 +20,11 @@ guidance:
   - Try to often change the first characters of the payload in order to possibly trigger different execution paths.
 
 # the agent toolbox
-functions:
+tool_box:
   # divided in action groups
   - name: Fuzzing
     description: You will use these actions to inspect the source code of the executable, and interact with the fuzzing session.
-    actions:
+    tools:
       # let's give the model a way to check the source :D
       - name: inspect
         description: "To visualize the original source code of the executable:"
