--- a/examples/recipe_workflow/create_list_of_ingredients.yml
+++ b/examples/recipe_workflow/create_list_of_ingredients.yml
@@ -7,9 +7,9 @@ prompt: prepare a list of ingredients for $food
 guidance:
   - Once you have made a list of ingredients, use the create_list_of_ingredients tool to confirm the decision.
 
-functions:
+tool_box:
   - name: Tools
-    actions:
+    tools:
       - name: create_list_of_ingredients
         description: "To provide the ingredients one per line as an organized list:"
         store_to: ingredients
