--- a/examples/ab_problem/task.yml
+++ b/examples/ab_problem/task.yml
@@ -46,10 +46,10 @@ evaluator:
     - python3
     - eval.py
 
-tool_box:
+functions:
   - name: Solve
     description: You will use these tools to provide the final answer to the problem.
-    tools:
+    actions:
       - name: solution
         description: "To provide final result:"
         example_payload: B#
