--- a/examples/ai_news/task.yml
+++ b/examples/ai_news/task.yml
@@ -12,10 +12,10 @@ prompt: >
 guidance:
   - You will first use the read_news command and then write the bullet points to your memory.
 
-tool_box:
+functions:
   - name: News
-    decription: You will use this tools to read the recent news.
-    tools:
+    description: You will use this tools to read the recent news.
+    actions:
       - name: read_news
         description: "To read the recent news:"
         max_shown_output: 4096
