new: added support for ://, :// and :// variables interpolation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,3 +61,6 @@ lto = true        # Enable link-time optimization
 codegen-units = 1 # Reduce number of codegen units to increase optimizations
 panic = 'abort'   # Abort on panic
 strip = true      # Strip symbols from binary*
+
+[dev-dependencies]
+wiremock = "0.6.2"
