testing new reasoning namespace

--- a/examples/code_auditor/task.yml
+++ b/examples/code_auditor/task.yml
@@ -3,6 +3,7 @@ using:
   - filesystem
   # allows the agent to set the task as complete
   - task
+  - reasoning
 
 system_prompt: > 
   You are an expert application security professional.
