--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,13 +48,17 @@ reqwest_cookie_store = "0.8.0"
 serde_json = "1.0.120"
 clap = { version = "4.5.6", features = ["derive"] }
 tera = { version = "1.20.0", default-features = false }
-clust = { version = "0.9.0" }
+# clust = { version = "0.9.0" }
+clust = { git = "https://github.com/evilsocket/clust.git", branch = "update_bytes_version" }
+
 ureq = { version = "2.11.0", features = ["json"] }
 mime = "0.3.17"
 rand = "0.8.5"
 reqwest-eventsource = "0.6.0"
 futures = "0.3.31"
 env_logger = "0.11.3"
+tokio-tungstenite = "0.26.1"
+actix-web = "4.9.0"
 
 [profile.release]
 lto = true        # Enable link-time optimization
