--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ keywords = ["llm", "agent", "stateful-agents", "ai"]
 authors = ["Simone Margaritelli <evilsocket@gmail.com>"]
 license = "GPL-3.0"
 readme = "README.md"
-repository = "https://github.com/dreadnode/nerve"
-homepage = "https://github.com/dreadnode/nerve"
+repository = "https://github.com/evilsocket/nerve"
+homepage = "https://github.com/evilsocket/nerve"
 
 [[bin]]
 name = "nerve"
