--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nerve-adk"
-packages = [{ include = "nerve" }]
+packages = [{ include = "nerve" }, { include = "nerve/py.typed" }]
 version = "1.0.0"
 description = "The simple agent development kit."
 repository = "https://github.com/evilsocket/nerve"
@@ -26,7 +26,22 @@ loguru = "^0.7.3"
 ollama = "^0.4.7"
 click = "^8.1.8"
 inquirer = "^3.4.0"
+pyautogui = { version = "^0.9.54", optional = true }
+pyscreeze = { version = "^1.0.1", optional = true }
+pillow = { version = "^11.1.0", optional = true }
+pyperclip = { version = "^1.9.0", optional = true }
+types-pyautogui = { version = "^0.9.3.20241230", optional = true }
+types-pyperclip = { version = "^1.9.0.20250218", optional = true }
 
+[tool.poetry.extras]
+computer_use = [
+    "pyautogui",
+    "types-pyautogui",
+    "pyscreeze",
+    "pyperclip",
+    "types-pyperclip",
+    "pillow",
+]
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.8.0"
